<?xml version="1.0"?>
<package>
  <name>mjpegcanvasjs</name>
  <version>0.2.0</version>
  <description>Displays a MJPEG stream from mjpeg_server inside of a HTML5 canvas.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mjpegcanvasjs</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/mjpegcanvasjs/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/mjpegcanvasjs</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
